Implemented UsersController , users view , and routes for view-ing all the users with their gravatar.

--- a/public/assets/sass/main.css
+++ b/public/assets/sass/main.css
@@ -34,4 +34,12 @@ body {
   padding: 1em;
   margin-bottom: 2em; }
 
+.users {
+  margin-bottom: 3em; }
+
+.user-block {
+  text-align: center; }
+  .user-block .avatar {
+    margin: auto; }
+
 /*# sourceMappingURL=main.css.map */
