--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -51,3 +51,16 @@ body {
     margin-bottom: 2em;
 
 }
+
+//Users List
+.users {
+    margin-bottom : 3em;
+    
+}
+
+.user-block{
+    text-align: center;
+    .avatar {
+        margin: auto;
+    }
+}
